@@ -1,3 +1,9 @@
+2011-07-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-encoding-command-interactive): New defcustom.
+
+	* tramp-sh.el (tramp-maybe-open-connection): Use it.
+
 2011-06-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-method-out-of-band-p): Check, whether SIZE is
